Catch and ignore exceptions in destructors (XERCESC-1898).

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@881225 13f79535-47bb-0310-9956-ffa450edef68